# python-package-template

./: README.md  pyproject.toml
examples/: main.py
template_package/: __init__.py  module2.py
