[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template-package"
version = "0.0.1"
description = "Template package"
readme = "README.md"
requires-python = ">=3.7"

authors = [
  { name = "Your Name", email = "your@email.com" }
]

dependencies = [
  # "requests>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build"
]
