[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "template-package"
dynamic = ["version"]
description = "Template package"
readme = "README.md"
requires-python = ">=3.7"

authors = [
  { name = "Your Name", email = "your@email.com" }
]

dependencies = [
  # "requests>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build"
]

[tool.setuptools.packages.find]
include = ["template_package*"]

[tool.setuptools_scm]
